fixed user info scroll y-axis overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -187,6 +187,7 @@ h2, h3, h4{
   color: white;
   padding: 1rem 250rem .5rem;
   background: linear-gradient(#00000028, #000000);
+  overflow-y: hidden;
 }
 
 
